# chatbot_template

./: .copier-answers.yml  .env.template  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test-suite.yml
chatbot_template/: __init__.py
chatbot_template/config/: errors.yml  workflow.yml
chatbot_template/utils/: data_analysis.py  enums.py  local_saver.py  whatsapp_api_call_example.json  workflow.py
scripts/: README.md  ejemplo.py  telegram_hook.py  trial_workflow.py  whatsapp_hook.py
